--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-monaco-editor": "^0.55.0",
     "react-redux": "^9.1.0",
     "react-scripts": "^5.0.1",
+    "react-virtualized": "^9.22.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
